Revision history for DBIx::Class

        - Add is_paged method to DBIx::Class::ResultSet so that we can
          check that if we want a pager
        - Skip versioning test on really old perls lacking Time::HiRes
          (RT #50209)
        - Fixed on_connect_do/call regression when used with a coderef
          connector (RT #50003)

0.08112 2009-09-21 10:57:00 (UTC)
        - Remove the recommends from Makefile.PL, DBIx::Class is not
          supposed to have optional dependencies. ever.
        - Mangle the DBIx/Class.pm POD to be more clear about
          copyright and license
        - Put back PG's multiple autoinc per table support, accidentally
          dropped during the serial-autodetection rewrite
        - Make sure ResultSetColumn does not depend on the (undefined)
          return value of ->cursor->reset()
        - Add single() to ResultSetColumn (same semantics as ResultSet)
        - Make sure to turn off IDENTITY_INSERT after insert() on MSSQL
          tables that needed it
        - More informative exception on failing _resolve_relationship
        - Allow undef/NULL as the sole grouping value in Ordered
        - Fix unreported rollback exceptions in TxnScopeGuard
        - Fix overly-eager left-join chain enforcing code
        - Warn about using distinct with an existing group_by
        - Warn about attempting to $rs->get_column a non-unique column
          when has_many joins are added to resultset
        - Refactor of the exception handling system (now everything is a
          DBIx::Class::Exception object)

0.08111 2009-09-06 21:58:00 (UTC)
        - The hashref to connection_info now accepts a 'dbh_maker'
          coderef, allowing better intergration with Catalyst
        - Fixed a complex prefetch + regular join regression introduced
          in 0.08108
        - Fixed insert_bulk rebless handling
        - Fixed Storable roundtrip regression, and general serialization
          cleanup
        - SQLT related fixes: